--- a/amplify.yml
+++ b/amplify.yml
@@ -26,7 +26,7 @@ frontend:
           fi
         - npm run build
   artifacts:
-    baseDirectory: build
+    baseDirectory: .next
     files:
       - "**/*"
   cache:
